--- a/widget/html/accessoryexam/viewAccessoryExam.html
+++ b/widget/html/accessoryexam/viewAccessoryExam.html
@@ -19,10 +19,10 @@
                 &lt; 返回
             </a>
             <div id="middle">
-                <span id="title">辅助检查维护</span>
+                <span id="title">辅助检查信息</span>
             </div>
             <a id="right" tapmode="" class="button button-raised button-silver">
-
+                修改
             </a>
         </header>
         <div id="main" class="flex-con">
