--- a/widget/html/followup/followup.html
+++ b/widget/html/followup/followup.html
@@ -14,7 +14,7 @@
     <div id="wrap" class="flex-wrap flex-vertical">
         <header class="header-silver">
             <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-silver">
-                    &lt; 取消
+                    &lt; 返回
                 </a>
             <div id="middle">
                 <span id="title">随访信息</span>
@@ -39,7 +39,7 @@
                     </div>
                 </div>
             </div>
-            <div class="groupName">检查</div>
+<!--             <div class="groupName">检查</div>
             <div class="group">
                 <div class="field">
                     <div class="key">体检信息</div>
@@ -49,7 +49,7 @@
                     <div class="key">辅助检查</div>
                     <div class="value more"><span>&gt;</span></div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     </div>
