--- a/widget/html/history/viewFullHistory.html
+++ b/widget/html/history/viewFullHistory.html
@@ -115,107 +115,19 @@
                         <textarea id="diagnosis"></textarea>
                     </div>
                 </div>
-                <div class="field textarea_field">
+                <div class="field textarea_field bottom">
                     <div class="textarea_key">治疗</div>
                     <div class="textarea_value">
                         <textarea id="treatment"></textarea>
                     </div>
                 </div>
             </div>
-            <div class="groupName">裸眼视力</div>
+            <div class="groupName">检查</div>
             <div class="group">
-                <div class="field">
-                    <div class="key">Vod</div>
-                    <div class="value">
-                        <input type="text" id="vod" />
-                    </div>
+                <div class="field" tapmode="onFieldClick" onclick="openWin('physical');">
+                    <div class="key">体检信息</div>
+                    <div class="value more"><span>&gt;</span></div>
                 </div>
-                <div class="field bottom">
-                    <div class="key">Vos</div>
-                    <div class="value">
-                        <input type="text" id="vos" />
-                    </div>
-                </div>
-            </div>
-            <div class="groupName">矫正视力</div>
-            <div class="group">
-                <div class="field">
-                    <div class="key">Vod</div>
-                    <div class="value">
-                        <input type="text" id="corrected_vod" />
-                    </div>
-                </div>
-                <div class="field bottom">
-                    <div class="key">Vos</div>
-                    <div class="value">
-                        <input type="text" id="corrected_vos" />
-                    </div>
-                </div>
-            </div>
-            <div class="groupName">眼压</div>
-            <div class="group">
-                <div class="field">
-                    <div class="key">Tod</div>
-                    <div class="value_with_unit">
-                        <input type="text" id="tod" />
-                    </div>
-                    <div class="unit">mmHg</div>
-                </div>
-                <div class="field bottom">
-                    <div class="key">Tos</div>
-                    <div class="value_with_unit">
-                        <input type="text" id="tos" />
-                    </div>
-                    <div class="unit">mmHg</div>
-                </div>
-            </div>
-            <div class="groupName">其他</div>
-            <div class="group">
-                <div class="field">
-                    <div class="key">外眼</div>
-                    <div class="value">
-                        <input type="text" id="outer_eye" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="key">结膜</div>
-                    <div class="value">
-                        <input type="text" id="conjunctiva" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="key">角膜</div>
-                    <div class="value">
-                        <input type="text" id="cornea" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="key">前房</div>
-                    <div class="value">
-                        <input type="text" id="anterior_chamber" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="key">晶体</div>
-                    <div class="value">
-                        <input type="text" id="lens" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="key">玻璃体</div>
-                    <div class="value">
-                        <input type="text" id="vitreous" />
-                    </div>
-                </div>
-                <div class="field bottom">
-                    <div class="key">眼底</div>
-                    <div class="value">
-                        <input type="text" id="eyeground" />
-                    </div>
-                </div>
-            </div>
-            <div class="groupName">辅助检查</div>
-            <div class="group">
                 <div class="field bottom" tapmode="onFieldClick" onclick="openWin('accessory_exam')">
                     <div class="key">辅助检查</div>
                     <div class="value more"><span>&gt;</span></div>
