--- a/widget/html/followup/viewFollowUpFrame.html
+++ b/widget/html/followup/viewFollowUpFrame.html
@@ -70,18 +70,18 @@ apiready = function() {
 
     follow_up_id = api.pageParam.follow_up_id;
 
-    getFullFollowUp(follow_up_id);
+    getFollowUp(follow_up_id);
 
     api.addEventListener({
         name: 'followupSaveEvent'
     }, function(ret, err) {
         if (ret && ret.value) {
-            getFullFollowUp(ret.value.follow_up_id);
+            getFollowUp(ret.value.follow_up_id);
         }
     });
 }
 
-function getFullFollowUp(follow_up_id) {
+function getFollowUp(follow_up_id) {
     showProgress("加载中...");
     var model = api.require('model');
     var query = api.require('query');
@@ -93,14 +93,6 @@ function getFullFollowUp(follow_up_id) {
     query.createQuery(function(ret, err) {
         if (ret && ret.qid) {
             var queryId = ret.qid;
-            query.include({
-                qid: queryId,
-                column: 'physical_pointer'
-            });
-            query.include({
-                qid: queryId,
-                column: 'accessory_exam_pointer'
-            })
             query.whereEqual({
                 qid: queryId,
                 column: 'id',
@@ -143,7 +135,7 @@ function modiFollowUp() {
 
 function openWin(type) {
     var pageParam = {
-        source: "followup"
+        source_id: follow_up_id
     };
     var name = "";
     switch (type) {
