--- a/widget/html/physical/physicalFrame.html
+++ b/widget/html/physical/physicalFrame.html
@@ -16,53 +16,16 @@
     <div class="flex-wrap flex-vertical">
         <header class="header-silver">
             <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-silver">
-                &lt; 取消
+                &lt; 返回
             </a>
             <div id="middle">
                 <span id="title">体检信息维护</span>
             </div>
             <a id="right" tapmode="" onclick="savePhysical();" class="button button-raised button-blue">
-                确认
+                保存
             </a>
         </header>
         <div id="main" class="flex-con">
-            <!--             <div class="groupName">视力</div>
-            <div class="group">
-                <div class="subGroupName">裸眼</div>
-                <div class="group">
-                    <div class="field bottom">
-                        <div class="leftColumn">
-                            <div class="key">Vod</div>
-                            <div class="value">
-                                <input type="text" class="center" id="vod" onclick="openPicker('vod')" />
-                            </div>
-                        </div>
-                        <div class="rightColumn">
-                            <div class="key">Vos</div>
-                            <div class="value">
-                                <input type="text" class="center" id="vos" onclick="openPicker('vos')" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="subGroupName">矫正</div>
-                <div class="group">
-                    <div class="field bottom">
-                        <div class="leftColumn">
-                            <div class="key">Vod</div>
-                            <div class="value">
-                                <input type="text" class="center" id="corrected_vod" onclick="openPicker('corrected_vod')" />
-                            </div>
-                        </div>
-                        <div class="rightColumn">
-                            <div class="key">Vos</div>
-                            <div class="value">
-                                <input type="text" class="center" id="corrected_vos" onclick="openPicker('corrected_vos')" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
             <div class="groupName">裸眼视力</div>
             <div class="group group-edit">
                 <div class="field">
@@ -165,9 +128,10 @@
  */
 apiready = function() {
     window.closeWin = function(winName) {
-            api.closeWin();
-        }
-        // 视力通过picker选择，不允许输入
+        api.closeWin();
+    }
+
+    // 视力通过picker选择，不允许输入
     $api.attr($api.byId('vod'), 'readonly', 'true');
     $api.attr($api.byId('vos'), 'readonly', 'true');
     $api.attr($api.byId('corrected_vod'), 'readonly', 'true');
@@ -180,222 +144,52 @@ apiready = function() {
         }
     });
 
-    // model = api.require('model');
-    // query = api.require('query');
-    // model.config({
-    //     appId: historyConstants.appId,
-    //     appKey: historyConstants.appKey,
-    //     host: historyConstants.host
-    // });
-
-    // history_id = api.pageParam.history_id;
-    // physical_id = api.pageParam.physical_id;
-    // follow_up_id = api.pageParam.follow_up_id;
-    // type = "modi";
-    var history = getStorage("history");
-    var followup = getStorage("followup");
-    source = api.pageParam.source;
-    if (source == "followup") {
-        // source = "followup";
-        setPhysical(followup.physical_pointer);
-    } else {
-        source = "history";
-        setPhysical(history.physical_pointer);
-    }
-
-    // if (history_id != undefined && history_id != null && history_id != "") {
-    //     source = "history";
-    // } else {
-    //     source = "followup";
-    // }
-
-    // 如果主界面传入了id，代表修改，则从数据库查询已有数据
-    // if (physical_id != undefined && physical_id != null && physical_id != "") {
-    //     showProgress();
-    //     type = "modi";
-    //     query.createQuery(function(ret, err) {
-    //         if (ret && ret.qid) {
-    //             model.findById({
-    //                 class: historyConstants.table.physical,
-    //                 id: physical_id
-    //             }, function(ret, err) {
-    //                 hideProgress();
-    //                 if (err) {
-    //                     alert(JSON.stringify(err));
-    //                 } else {
-    //                     if (ret) {
-    //                         setPhysical(ret);
-    //                     }
-    //                 }
-    //             });
-    //         }
-    //     });
-    // }
-
+    var physical = getStorage("physical");
+    setPhysical(physical);
 }
 
-/**
- * [savePhysical description]
- * @return {[type]} [description]
- */
 function savePhysical() {
-    if (source == "history") {
-        var history = getStorage("history");
-        if (history.physical_pointer != undefined) {
-            history.physical_pointer.vod = $api.byId('vod').value;
-            history.physical_pointer.vos = $api.byId('vos').value;
-            history.physical_pointer.corrected_vod = $api.byId('corrected_vod').value;
-            history.physical_pointer.corrected_vos = $api.byId('corrected_vos').value;
-            history.physical_pointer.tod = $api.byId('tod').value;
-            history.physical_pointer.tos = $api.byId('tos').value;
-            history.physical_pointer.outer_eye = $api.byId('outer_eye').value;
-            history.physical_pointer.conjunctiva = $api.byId('conjunctiva').value;
-            history.physical_pointer.cornea = $api.byId('cornea').value;
-            history.physical_pointer.anterior_chamber = $api.byId('anterior_chamber').value;
-            history.physical_pointer.lens = $api.byId('lens').value;
-            history.physical_pointer.vitreous = $api.byId('vitreous').value;
-            history.physical_pointer.eyeground = $api.byId('eyeground').value;
-        } else {
-            var physical_pointer = {
-                vod: $api.byId('vod').value,
-                vos: $api.byId('vos').value,
-                corrected_vod: $api.byId('corrected_vod').value,
-                corrected_vos: $api.byId('corrected_vos').value,
-                tod: $api.byId('tod').value,
-                tos: $api.byId('tos').value,
-                outer_eye: $api.byId('outer_eye').value,
-                conjunctiva: $api.byId('conjunctiva').value,
-                cornea: $api.byId('cornea').value,
-                anterior_chamber: $api.byId('anterior_chamber').value,
-                lens: $api.byId('lens').value,
-                vitreous: $api.byId('vitreous').value,
-                eyeground: $api.byId('eyeground').value,
-            }
-            history.physical_pointer = physical_pointer;
-        }
-
-        setStorage("history", history);
-
+    var physical = getStorage("physical");
+    var id = "";
+    if (physical != undefined) {
+        id = physical.id;
     } else {
-        var followup = getStorage("followup");
-        if (followup.physical_pointer != undefined) {
-            followup.physical_pointer.vod = $api.byId('vod').value;
-            followup.physical_pointer.vos = $api.byId('vos').value;
-            followup.physical_pointer.corrected_vod = $api.byId('corrected_vod').value;
-            followup.physical_pointer.corrected_vos = $api.byId('corrected_vos').value;
-            followup.physical_pointer.tod = $api.byId('tod').value;
-            followup.physical_pointer.tos = $api.byId('tos').value;
-            followup.physical_pointer.outer_eye = $api.byId('outer_eye').value;
-            followup.physical_pointer.conjunctiva = $api.byId('conjunctiva').value;
-            followup.physical_pointer.cornea = $api.byId('cornea').value;
-            followup.physical_pointer.anterior_chamber = $api.byId('anterior_chamber').value;
-            followup.physical_pointer.lens = $api.byId('lens').value;
-            followup.physical_pointer.vitreous = $api.byId('vitreous').value;
-            followup.physical_pointer.eyeground = $api.byId('eyeground').value;
-        } else {
-            var physical_pointer = {
-                vod: $api.byId('vod').value,
-                vos: $api.byId('vos').value,
-                corrected_vod: $api.byId('corrected_vod').value,
-                corrected_vos: $api.byId('corrected_vos').value,
-                tod: $api.byId('tod').value,
-                tos: $api.byId('tos').value,
-                outer_eye: $api.byId('outer_eye').value,
-                conjunctiva: $api.byId('conjunctiva').value,
-                cornea: $api.byId('cornea').value,
-                anterior_chamber: $api.byId('anterior_chamber').value,
-                lens: $api.byId('lens').value,
-                vitreous: $api.byId('vitreous').value,
-                eyeground: $api.byId('eyeground').value,
-            }
-            followup.physical_pointer = physical_pointer;
-        }
-
-        setStorage("followup", followup);
+        physical = {};
     }
-    api.closeWin();
-
-    // showProgress();
-
-    // if (type == "modi") {
-    //     model.updateById({
-    //         class: historyConstants.table.physical,
-    //         id: physical_id,
-    //         value: {
-    //             vod: $api.byId('vod').value,
-    //             vos: $api.byId('vos').value,
-    //             corrected_vod: $api.byId('corrected_vod').value,
-    //             corrected_vos: $api.byId('corrected_vos').value,
-    //             tod: $api.byId('tod').value,
-    //             tos: $api.byId('tos').value,
-    //             outer_eye: $api.byId('outer_eye').value,
-    //             conjunctiva: $api.byId('conjunctiva').value,
-    //             cornea: $api.byId('cornea').value,
-    //             anterior_chamber: $api.byId('anterior_chamber').value,
-    //             lens: $api.byId('lens').value,
-    //             vitreous: $api.byId('vitreous').value,
-    //             eyeground: $api.byId('eyeground').value,
-    //         }
-    //     }, function(ret, err) {
-    //         hideProgress();
-    //         if (ret) {
-    //             physicalModiEvent(ret.id);
-    //             api.closeWin();
-    //         } else {
-    //             alert("保存体检信息失败！" + JSON.stringify(err));
-    //         }
-    //     });
-    // } else {
-    //     model.insert({
-    //         class: historyConstants.table.physical,
-    //         value: {
-    //             vod: $api.byId('vod').value,
-    //             vos: $api.byId('vos').value,
-    //             corrected_vod: $api.byId('corrected_vod').value,
-    //             corrected_vos: $api.byId('corrected_vos').value,
-    //             tod: $api.byId('tod').value,
-    //             tos: $api.byId('tos').value,
-    //             outer_eye: $api.byId('outer_eye').value,
-    //             conjunctiva: $api.byId('conjunctiva').value,
-    //             cornea: $api.byId('cornea').value,
-    //             anterior_chamber: $api.byId('anterior_chamber').value,
-    //             lens: $api.byId('lens').value,
-    //             vitreous: $api.byId('vitreous').value,
-    //             eyeground: $api.byId('eyeground').value
-    //         }
-    //     }, function(ret, err) {
-    //         if (ret) {
-    //             physicalAddEvent(ret.id);
-    //             var db_class = "";
-    //             var db_id = "";
-    //             if (source == "history") {
-    //                 db_class = historyConstants.table.history;
-    //                 db_id = history_id;
-    //             } else {
-    //                 db_class = historyConstants.table.followup;
-    //                 db_id = follow_up_id;
-    //             }
-    //             if (history_id != "")
-    //                 model.updateById({
-    //                     class: db_class,
-    //                     id: db_id,
-    //                     value: {
-    //                         physical_pointer: ret.id
-    //                     }
-    //                 }, function(ret, err) {
-    //                     hideProgress();
-    //                     if (ret) {
-    //                         api.closeWin();
-    //                     } else {
-    //                         alert("保存体检信息失败！" + JSON.stringify(err));
-    //                     }
-    //                 });
-    //         } else {
-    //             hideProgress();
-    //             alert("保存体检信息失败！" + JSON.stringify(err));
-    //         }
-    //     });
-    // }
+    var model = api.require('model');
+    model.config({
+        appId: historyConstants.appId,
+        appKey: historyConstants.appKey,
+        host: historyConstants.host
+    });
+    model.updateById({
+        class: historyConstants.table.physical,
+        id: id,
+        value: {
+            source_id: api.pageParam.source_id,
+            vod: $api.byId('vod').value,
+            vos: $api.byId('vos').value,
+            corrected_vod: $api.byId('corrected_vod').value,
+            corrected_vos: $api.byId('corrected_vos').value,
+            tod: $api.byId('tod').value,
+            tos: $api.byId('tos').value,
+            outer_eye: $api.byId('outer_eye').value,
+            conjunctiva: $api.byId('conjunctiva').value,
+            cornea: $api.byId('cornea').value,
+            anterior_chamber: $api.byId('anterior_chamber').value,
+            lens: $api.byId('lens').value,
+            vitreous: $api.byId('vitreous').value,
+            eyeground: $api.byId('eyeground').value,
+        }
+    }, function(ret, err) {
+        if (ret) {
+            setStorage("physical", ret);
+            physicalSaveEvent(ret.id);
+            api.closeWin();
+        } else {
+            alert(JSON.stringify(ret));
+        }
+    });
 }
 </script>
 
