--- a/widget/html/physical/viewPhysicalFrame.html
+++ b/widget/html/physical/viewPhysicalFrame.html
@@ -21,9 +21,9 @@
             <div id="middle">
                 <span id="title">体检信息</span>
             </div>
-            <a id="right" tapmode="" class="button button-raised button-silver">
-
-                </a>
+            <a id="right" tapmode="" class="button button-raised button-silver" onclick="modiPhysical();">
+                修改
+            </a>
         </header>
         <div id="main" class="flex-con">
             <div class="groupName">裸眼视力</div>
@@ -127,7 +127,6 @@
  * @return {[type]} [description]
  */
 apiready = function() {
-    var followup = getStorage("followup");
 
     $api.attr($api.byId('vod'), 'readonly', 'true');
     $api.attr($api.byId('vos'), 'readonly', 'true');
@@ -143,43 +142,79 @@ apiready = function() {
     $api.attr($api.byId('vitreous'), 'readonly', 'true');
     $api.attr($api.byId('eyeground'), 'readonly', 'true');
 
-    if (followup.physical_pointer != undefined) {
-        setPhysical(followup.physical_pointer);
-    }
+    getPhysical();
 
     window.closeWin = function(winName) {
         api.closeWin();
     }
 
     // 如果physical修改或者新增，则需刷新本页面
-    // api.addEventListener({
-    //     name: 'physicalSaveEvent'
-    // }, function(ret, err) {
-    //     if (ret) {
-    //         var followup = getStorage("followup");
-    //         setPhysical(followup.physical);
-    //     }
-    // });
+    api.addEventListener({
+        name: 'physicalSaveEvent'
+    }, function(ret, err) {
+        if (ret) {
+            var physical = getStorage("physical");
+            setPhysical(physical);
+        }
+    });
+}
+
+function getPhysical() {
+    showProgress("加载中...");
+    rmStorage("physical");
+    var model = api.require('model');
+    var query = api.require('query');
+    model.config({
+        appId: historyConstants.appId,
+        appKey: historyConstants.appKey,
+        host: historyConstants.host
+    });
+    query.createQuery(function(ret, err) {
+        if (ret && ret.qid) {
+            var queryId = ret.qid;
+            query.whereEqual({
+                qid: queryId,
+                column: 'source_id',
+                value: api.pageParam.source_id
+            })
+            model.findAll({
+                class: historyConstants.table.physical,
+                qid: queryId
+            }, function(ret, err) {
+                hideProgress();
+                if (err) {
+                    alert(JSON.stringify(err));
+                } else {
+                    if (ret[0]) {
+                        setStorage("physical", ret[0]);
+                        setPhysical(ret[0]);
+                    }
+                }
+            });
+        }
+    });
 }
 
 /**
  * [modiPhysical description]
  * @return {[type]} [description]
  */
-// function modiPhysical() {
-//     api.openWin({
-//         name: api.winName + "modi_physical",
-//         url: './physical.html',
-//         pageParam: {},
-//         vScrollBarEnabled: false,
-//         reload: true,
-//         bounces: false,
-//         animation: {
-//             type: "movein",
-//             duration: 0
-//         },
-//     });
-// }
+function modiPhysical() {
+    api.openWin({
+        name: api.winName + "_modi_physical",
+        url: './physical.html',
+        pageParam: {
+            source_id: api.pageParam.source_id
+        },
+        vScrollBarEnabled: false,
+        reload: true,
+        bounces: false,
+        animation: {
+            type: "movein",
+            duration: 0
+        }
+    });
+}
 </script>
 
 </html>
